Moved footer text to inside Home main due to positioning issue on mobile

--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -1,5 +1,6 @@
 .main {
   padding: 5%;
+  height: 100%;
 }
 
 .main p {
@@ -46,6 +47,11 @@
 
 .guidecontent img {
   height: 14vh;
+}
+
+.aboutcontainer {
+  text-align: center;
+  padding-top: 40px;
 }
 
 @media only screen and (min-width: 768px) {
